--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
 page-home {
 
+.activePageHighlight {
+	background-color: map-get($colors, primary);
+	//background: color($colors, twitter);
+}
+
 }
